--- a/upstage/backdrop.html
+++ b/upstage/backdrop.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>practice</title>
+  <title>Backdrop</title>
   <link rel="stylesheet" href="backdrop.css">
 </head>
 <body>
@@ -14,13 +14,16 @@
 
    <img src="media/curtains.png" id="curtains">
 
-   <div id="bottom">
-     <svg id="grass"><use xlink:href="grass.svg#grass"></use></svg>
-     </div>
 
-      <div>
+
+      <div id="insect">
           <svg class="icon icon-butterfly" id="butterfly"><use xlink:href="butterfly.svg#butterfly"></use></svg>
           </div>
+
+      <div id="bottom" >
+          <svg id="grass"><use xlink:href="grass.svg#grass"></use></svg>
+        </div>
+
 
       </div> <!--close #container -->
 
